# deepseek-v4-attention-lab

./: .gitignore  README.md  pyproject.toml
docs/: api.md  experiment_design.md  mechanisms.md
docs/results/: attention_benchmark_gpu.csv  attention_benchmark_gpu.json  attention_diagnostics_gpu.csv  attention_diagnostics_gpu.json  final_results.md  tiny_lm_loss_curves_gpu.csv  tiny_lm_validation_gpu.csv  tiny_lm_validation_summary_gpu.csv
docs/results/tiny_lm/associative_recall/: config.json  loss_curves.csv  metrics.json
docs/results/tiny_lm/copy_first/: config.json  loss_curves.csv  metrics.json
docs/results/tiny_lm/local/: config.json  loss_curves.csv  metrics.json
scripts/: plot_results.py  run_3090_experiment_suite.py  run_attention_benchmark.py  run_attention_diagnostics.py  run_tiny_lm_experiment.py
src/dsv4_attention_lab/: __init__.py  configs.py  masks.py  norms.py  rope.py  utils.py
src/dsv4_attention_lab/attention/: __init__.py  common.py  csa.py  dense_mha.py  hca.py  hybrid.py  kv_compression.py  sliding_window.py  sparse_topk.py
src/dsv4_attention_lab/benchmarks/: benchmark_attention.py  benchmark_kv_cache.py
src/dsv4_attention_lab/experiments/: __init__.py  attention_diagnostics.py  compare_attention.py  synthetic_long_context.py  train_tiny_lm.py
src/dsv4_attention_lab/models/: __init__.py  tiny_transformer.py
tests/: test_csa.py  test_dense_mha.py  test_hca.py  test_hybrid.py  test_kv_compression.py  test_sliding_window.py  test_sparse_topk.py  test_synthetic_tasks.py  test_tiny_transformer.py
(+3 files in other folders)
